# Rover

./: .gitattributes
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/joy/include/joy/: joy.h  joy.h.save
install/joy/lib/joy/: rov_joy_controller
install/joy/share/joy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joy/share/joy/cmake/: joyConfig-version.cmake  joyConfig.cmake
install/joy/share/joy/environment/: ament_prefix_path.dsv  path.dsv
install/launcher/share/launcher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/main/share/main/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/motor/share/motor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/strategi/share/strategi/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision/share/vision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/joy/: CMakeLists.txt
src/joy/include/joy/: joy.h.save
src/joy/src/: joy.cpp  joy.cpp.save
src/launcher/: CMakeLists.txt  package.xml  setup.py
src/launcher/launch/: joy.launch  joy.launch.py  main.launch.py  motor.launch.py  rover.launch.py  rover_launch.py  vision.launch.py
src/log/: latest_build
src/main/: CMakeLists.txt
src/main/include/main/: main.h
src/main/src/: main.cpp
src/motor/: CMakeLists.txt
src/motor/include/motor/: motor.h
src/motor/src/: motor.cpp
src/strategi/: CMakeLists.txt
src/strategi/include/strategi/: strategi.h
src/strategi/src/: strategi.cpp
src/vision/: CMakeLists.txt
src/vision/src/: deteksi.cpp
(+48 files in other folders)
