# cmake_minimum_required(VERSION 3.5)
# project(launcher)

# # Temukan semua dependensi yang diperlukan
# find_package(ament_cmake REQUIRED)
# find_package(rclcpp REQUIRED)
# find_package(joy REQUIRED)
# find_package(geometry_msgs REQUIRED)
# find_package(sensor_msgs REQUIRED)

# # Instalasi file-file launch
# install(
#   DIRECTORY launch/
#   DESTINATION share/${launcher}/
# )

# ament_package()