<?xml version="1.0"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.1</version>
  <description>Launcher package for rover</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
